[gd_scene load_steps=21 format=2]

[ext_resource path="res://enemies/CorruptedRifleman/corrupted_rifleman_aiming.png" type="Texture" id=1]
[ext_resource path="res://enemies/CorruptedRifleman/CorruptedRifleman.gd" type="Script" id=2]
[ext_resource path="res://enemies/CorruptedRifleman/corrupted_rifleman_idle.png" type="Texture" id=3]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/RiflemanFSM.gd" type="Script" id=4]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/AdvancingState.gd" type="Script" id=5]
[ext_resource path="res://players/Player/Sounds/pickup_gun.ogg" type="AudioStream" id=6]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/ShootingState.gd" type="Script" id=7]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/DeadState.gd" type="Script" id=8]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/RecoilingState.gd" type="Script" id=9]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/StunnedState.gd" type="Script" id=10]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/AimingState.gd" type="Script" id=11]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/PostShootingState.gd" type="Script" id=12]
[ext_resource path="res://enemies/CorruptedRifleman/Sounds/alt_gunshot.ogg" type="AudioStream" id=13]
[ext_resource path="res://utils/Plane2DMovementHelper.tscn" type="PackedScene" id=14]
[ext_resource path="res://utils/DropItemComponent.tscn" type="PackedScene" id=15]
[ext_resource path="res://enemies/CorruptedRifleman/state_machine/IdleState.gd" type="Script" id=16]
[ext_resource path="res://effects/sounds/damage_sound_scenes.tscn" type="PackedScene" id=17]
[ext_resource path="res://enemies/CorruptedRifleman/corrupted_rifleman_dead.png" type="Texture" id=18]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.5, 0.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "aim",
"speed": 5.0
} ]

[node name="CorruptedRifleman" type="KinematicBody"]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1.1, 0, 0, 0 )
collision_layer = 5
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.528717, 0, 0, 0, 1, 0, 0, 0, 0.799748, 0, 0, 0.207577 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 0 )
collision_mask = 5

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="AdvancingState" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="AdvancingTimer" type="Timer" parent="StateMachine/AdvancingState"]

[node name="ShootingState" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="RecoilingState" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="RecoilingTimer" type="Timer" parent="StateMachine/RecoilingState"]
one_shot = true

[node name="StunnedState" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="StunnedTimer" type="Timer" parent="StateMachine/StunnedState"]

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="PostShootingState" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="PostShootingTimer" type="Timer" parent="StateMachine/PostShootingState"]
wait_time = 0.5
one_shot = true

[node name="AimingState" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="AimingTimer" type="Timer" parent="StateMachine/AimingState"]

[node name="FlashDelayTimer" type="Timer" parent="StateMachine/AimingState"]
wait_time = 0.03
one_shot = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.972549, 0, 0, 0.513726 )

[node name="FireAudioStreamPlayer2D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 13 )
unit_db = 24.954
unit_size = 18.4

[node name="ClickAudioStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = -2.936
unit_size = 4.7
pitch_scale = 0.62

[node name="SpriteHolder" type="Spatial" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite3D" parent="SpriteHolder"]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -0.106238, 0, 0 )
layers = 2
shaded = true
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="Plane2DMovementHelper" parent="." instance=ExtResource( 14 )]

[node name="DropItemComponent" parent="." instance=ExtResource( 15 )]

[node name="DamageAudioStreamPlayer3D" parent="." instance=ExtResource( 17 )]

[node name="Flash" type="OmniLight" parent="."]
transform = Transform( 0.833333, 0, 0, 0, 1, 0, 0, 0, 0.909091, 0.176243, 0.142976, -0.114544 )
visible = false
light_energy = 8.771
omni_range = 1.2189

[node name="DamageSpriteModulateTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Tween" type="Tween" parent="."]
